azure/repind-repind.old/msv/cf/provide-individual-score/kubernetes/cae/deploy-profile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provide-individual-score
spec:
  template:
    spec:
      imagePullSecrets:
        - name: p-repind-registry-cae
      containers:
        - name: provide-individual-score
          resources:
            requests:
              cpu: "50m"
              memory: "512Mi"
            limits:
              cpu: "200m"
              memory: "800Mi"
